--- a/src/index.css
+++ b/src/index.css
@@ -1,76 +1,524 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
+@tailwind components;
+@tailwind utilities;
 
-  @layer base {
-    :root {
-      --background: 0 0% 100%;
-      --foreground: 222.2 84% 4.9%;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  --yellow: #fed800;
+  --white: #ffffff;
+  --black-1: #23393d;
+  --black-2: #3348295a;
+  --green: rgb(39, 187, 39);
+  --red: #d10000;
+  --font-normal: 16px;
+  --font-large: 18px;
+}
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
 
-      --card: 0 0% 100%;
-      --card-foreground: 222.2 84% 4.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
 
-      --popover: 0 0% 100%;
-      --popover-foreground: 222.2 84% 4.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
 
-      --primary: 222.2 47.4% 11.2%;
-      --primary-foreground: 210 40% 98%;
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
 
-      --secondary: 210 40% 96.1%;
-      --secondary-foreground: 222.2 47.4% 11.2%;
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
 
-      --muted: 210 40% 96.1%;
-      --muted-foreground: 215.4 16.3% 46.9%;
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
 
-      --accent: 210 40% 96.1%;
-      --accent-foreground: 222.2 47.4% 11.2%;
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
 
-      --destructive: 0 84.2% 60.2%;
-      --destructive-foreground: 210 40% 98%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
 
-      --border: 214.3 31.8% 91.4%;
-      --input: 214.3 31.8% 91.4%;
-      --ring: 222.2 84% 4.9%;
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
 
-      --radius: 0.5rem;
-    }
-
-    .dark {
-      --background: 222.2 84% 4.9%;
-      --foreground: 210 40% 98%;
-
-      --card: 222.2 84% 4.9%;
-      --card-foreground: 210 40% 98%;
-
-      --popover: 222.2 84% 4.9%;
-      --popover-foreground: 210 40% 98%;
-
-      --primary: 210 40% 98%;
-      --primary-foreground: 222.2 47.4% 11.2%;
-
-      --secondary: 217.2 32.6% 17.5%;
-      --secondary-foreground: 210 40% 98%;
-
-      --muted: 217.2 32.6% 17.5%;
-      --muted-foreground: 215 20.2% 65.1%;
-
-      --accent: 217.2 32.6% 17.5%;
-      --accent-foreground: 210 40% 98%;
-
-      --destructive: 0 62.8% 30.6%;
-      --destructive-foreground: 210 40% 98%;
-
-      --border: 217.2 32.6% 17.5%;
-      --input: 217.2 32.6% 17.5%;
-      --ring: 212.7 26.8% 83.9%;
-    }
+    --radius: 0.5rem;
   }
 
-  @layer base {
-    * {
-      @apply border-border;
-    }
-    body {
-      @apply bg-background text-foreground;
-    }
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
   }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+:root {
+  --text-extrasmall: 12px;
+  --text-small: 14px;
+  --text-medium: 16px;
+  --text-large: 18px;
+  --text-xl: 18px;
+  --text-2xl: 20px;
+  --text-3xl: 22px;
+  --white: #fff;
+  --gray-1: #8c8c8c8c;
+  --gray-2: #666666;
+  --purple: #7150e6;
+}
+
+body {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+input {
+  width: 100%;
+  height: 43px;
+  border-radius: 5px;
+  border: 1px solid #d5d5d5;
+  line-height: 40px;
+  padding: 0px 15px;
+  font-size: 15px;
+  color: #2f3032;
+  outline: none;
+  transition: all 0.3s ease;
+}
+input::placeholder {
+  letter-spacing: 1px;
+}
+input:focus {
+  border: none;
+  outline: 1px solid var(--purple);
+}
+button {
+  transition: all 0.15s ease;
+}
+button:hover {
+  cursor: pointer;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+/*.............Register............... */
+.authenticationTop__container {
+  height: 100vh;
+  width: 100vw;
+}
+.authenticationleftSide__container {
+  flex: 0.6;
+}
+.authenticationTop__container div:nth-child(1) img {
+  width: 100%;
+  height: 100%;
+}
+.register__container {
+  width: 500px;
+  justify-content: center;
+  margin: 0px auto;
+}
+.authenticationLogo__container {
+  justify-content: center;
+}
+.authenticationLogo__container div {
+  width: 330px;
+}
+
+.authenticationLogo__container img {
+  object-fit: contain;
+  width: 100%;
+  height: fit-content;
+}
+
+.authentication__header {
+  align-items: center;
+  gap: 20px;
+  padding: 20px 0px;
+  padding-top: 5px;
+}
+.authentication__header h4 {
+  font-size: var(--text-2xl);
+  font-weight: 600;
+}
+
+.goolge_loginButton_container {
+  align-items: center;
+  width: 100%;
+  gap: 10px;
+}
+
+.authentication__separator {
+  width: 60%;
+  gap: 10px;
+  padding-top: 5px;
+  align-items: center;
+}
+.authentication__separator span:first-child,
+.authentication__separator :last-child {
+  background-color: var(--gray-1);
+  height: 1px;
+  flex: 0.5;
+}
+
+.authentication__separator :nth-child(2) {
+  color: var(--gray-2);
+  font-size: 15px;
+}
+.authentication__lower {
+  padding-top: 5px;
+}
+.authentication__lower form {
+  gap: 10px;
+}
+.authenticationInput__container {
+  gap: 5px;
+}
+.authenticationInput__container input {
+  background-color: #f0edede8;
+  height: 40px;
+}
+.passwordInput {
+  position: relative;
+}
+.passwordInput > span {
+  position: absolute;
+  right: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all 0.15s ease;
+}
+.passwordInput span:hover {
+  cursor: pointer;
+}
+.authenticationInput__header {
+  text-transform: capitalize;
+  font-weight: 500;
+  font-size: 15px;
+  letter-spacing: 0.5px;
+  gap: 5px;
+  align-items: center;
+}
+.authenticationInput__header span {
+  color: red;
+  font-size: 16px;
+}
+
+.authentication__btn {
+  background-color: var(--purple);
+  border: none;
+  padding: 13px 15px;
+  border-radius: 5px;
+  color: var(--white);
+  font-weight: 500;
+  font-size: 15px;
+  letter-spacing: 1px;
+  margin-top: 10px;
+}
+.authentication__btn:hover {
+  opacity: 0.96;
+}
+.authentication__btn:disabled {
+  cursor: not-allowed;
+}
+.authentication__footer {
+  justify-content: center;
+  gap: 10px;
+  font-size: 15px;
+}
+.authentication__footer p {
+  justify-content: center;
+  gap: 10px;
+}
+.authentication__footer p a {
+  font-weight: 400;
+}
+
+/* counter */
+.counter {
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 27px;
+  height: 27px;
+  color: white;
+  font-weight: 500;
+  padding: 1px 4px;
+  position: absolute;
+  top: -12px;
+  right: -17px;
+}
+
+/* payments */
+
+.payments {
+  position: fixed;
+  background-color: #0e0f14f6;
+  justify-content: center;
+  padding: 0px 20px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 999;
+}
+
+.paymentContainer {
+  background-color: var(--black-2);
+  color: #fff;
+  width: 500px;
+  height: fit-content;
+  border-radius: 5px;
+  margin-top: 100px;
+}
+
+.readyToPay {
+  padding: 10px 20px;
+  font-weight: 400;
+  font-size: 15px;
+  text-align: center;
+}
+
+.readyToPay__header {
+  justify-content: space-between;
+  padding-top: 5px;
+  padding-bottom: 10px;
+}
+
+.readyToPay__header h4 {
+  font-weight: 500;
+  letter-spacing: 0.5px;
+}
+
+.readyToPay__header button i {
+  color: var(--red);
+}
+
+.inputContainer {
+  flex-direction: column;
+}
+
+.inputContainer span {
+  font-size: 13px;
+  text-align: start;
+  padding-bottom: 8px;
+}
+
+.readyToPay input {
+  border: none;
+  background-color: var(--black-1);
+  margin: 0;
+}
+
+.payment__buttons {
+  justify-content: space-around;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.payment__buttons button {
+  background-color: #7150e6;
+  min-width: 90px;
+  padding: 8px;
+  border-radius: 4px;
+  font-size: 15px;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  font-weight: 500;
+}
+
+.processingPayments,
+.succesfulPayments,
+.failedPayments {
+  padding: 8px;
+}
+
+.processingPayments h3 {
+  font-weight: 500;
+  color: var(--gray-1);
+  letter-spacing: 1px;
+  padding-bottom: 5px;
+}
+
+.processingPayments h4 {
+  font-size: 16px;
+  color: var(--green);
+}
+
+.succesfulPayments h4 {
+  color: var(--white);
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+
+.succesfulPayments button,
+.failedPayments button {
+  background-color: var(--green);
+  padding: 10px 10px;
+  border-radius: 5px;
+  font-size: var(--font-large);
+  margin-top: 20px;
+  margin-bottom: 10px;
+  width: 100%;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+}
+
+.failedPayments button {
+  background-color: var(--red);
+  color: var(--white);
+  font-size: var(--font-large);
+}
+
+/* Small devices (small screens, landscape phones) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+  /* Styles for small screens */
+}
+
+/* Medium devices (tablets) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+  /* Styles for medium screens */
+}
+
+/* Large devices (desktops) */
+@media (max-width: 1199.98px) {
+  .authenticationleftSide__container {
+    display: none;
+  }
+  .register__container {
+    padding: 100px 20px;
+    justify-content: flex-start;
+  }
+}
+
+/* Extra large devices (large desktops) */
+@media (min-width: 1200px) {
+  /* Styles for extra-large screens */
+}
+
+/* others */
+.input__error section > section {
+  margin: 4px 0px;
+  align-items: center;
+  gap: 3px;
+  font-size: var(--text-small);
+  color: red;
+}
